- Fixed out by one error in wxTextCtrl::GetStyle.
- Fixed problem with getting input in universal/unicode build of wxMSW.
- Link oleacc.lib conditionally.
- Drag and drop now works inside static boxes.
- Fall back to unthemed wxNotebook if specified orientation not available.
- wxListCtrl and wxTreeCtrl now resize their standard font if the user
  changes the system font.

wxGTK:

- wxEVT_MENU_CLOSE and wxEVT_MENU_OPENED for popup menus are now generated
- Implemented wxCURSOR_BLANK support
- wxSlider generates all scroll events now and not only wxEVT_SCROLL_THUMBTRACK
- Fixed a host of bugs in wxMediaCtrl as well as added a GStreamer 0.10
  implementation
- Improved configure checks for GStreamer. You may also now specify
  --enable-gstreamer8 to force configure to check for GStreamer 0.8.\
- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.
- Fixed problem trying to print from a preview, whereby wrong printer
  class was used.
- Worked around pango crashes in strncmp on Solaris 10.
- Polygon and line drawing speeded up if there is no scaling.
- Fixed problems with CJK input method.
- Implemented ScrollLines/Pages() for all windows (Paul Cornett)

wxMac:

- Fixed problem with clipboard support for custom data flavors.
- Fixed focus handling for generic controls in carbon-cfm.
- Fixed a printing crash bug, for example using File->Print and changing
  Popup from 'Copies & Pages' to e.g. 'Layout'.
- Improved support for help and application menu items.
- Added default implementations for wxTextCtrl::Replace and wxTextCtrl::Remove.
- Added support for 10.4 context menu.
- Added support for wxFRAME_EX_METAL and wxDIALOG_EX_METAL styles.
- Added wxNotebook::HitTest support.
- Corrected idle wake-up.
- Corrected wxExecute.
- Now makes use of full printer resolution.
- Corrected CGImage handling in wxBitmap.
- Now uses simple hide/show transition for top-level windows.